<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NumPadBackground">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/button9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/9"
                android:text="@string/string_9" />

            <Button
                android:id="@+id/buttonDec"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/X"
                android:text="@string/string_dec" />

            <Button
                android:id="@+id/buttonEl"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/E"
                android:text="@string/string_el" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/button6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/6"
                android:text="@string/string_6" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/7"
                android:text="@string/string_7" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/8"
                android:text="@string/string_8" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/button3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/3"
                android:text="@string/string_3" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/4"
                android:text="@string/string_4" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/5"
                android:text="@string/string_5" />

        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/button0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/0"
                android:text="@string/string_0" />

            <Button
                android:id="@+id/button1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/1"
                android:text="@string/string_1" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:onClick="enterValue"
                android:tag="d/2"
                android:text="@string/string_2" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>