<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AdvancePadBackground">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow android:layout_weight="1">

                <Button
                    android:id="@+id/buttonSin"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="sin"
                    android:text="@string/string_sin" />

                <Button
                    android:id="@+id/buttonCos"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="cos"
                    android:text="@string/string_cos" />

                <Button
                    android:id="@+id/buttonTan"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="tan"
                    android:text="@string/string_tan" />

                <Button
                    android:id="@+id/buttonLn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="ln"
                    android:text="@string/string_ln" />

                <Button
                    android:id="@+id/buttonLog"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="log"
                    android:text="@string/string_log" />

                <Button
                    android:id="@+id/buttonLogX"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="logx"
                    android:text="@string/string_logx" />

            </TableRow>

            <TableRow android:layout_weight="1">

                <Button
                    android:id="@+id/arcsin"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="arcsin"
                    android:text="@string/string_arcsin" />

                <Button
                    android:id="@+id/arccos"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="arccos"
                    android:text="@string/string_arccos" />

                <Button
                    android:id="@+id/arctan"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="arctan"
                    android:text="@string/string_arctan" />

                <Button
                    android:id="@+id/e"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="sq"
                    android:text="@string/string_e" />

                <Button
                    android:id="@+id/pi"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="pi"
                    android:text="@string/string_pi" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform" />

            </TableRow>

            <TableRow android:layout_weight="1">

                <Button
                    android:id="@+id/buttonSq"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="sq"
                    android:text="@string/string_sq" />

                <Button
                    android:id="@+id/buttonSqrt"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="sqrt"
                    android:text="@string/string_sqrt" />

                <Button
                    android:id="@+id/buttonFactorial"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="!"
                    android:text="@string/string_factorial" />

                <Button
                    android:id="@+id/buttonLeftParen"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag="("
                    android:text="@string/string_left_parentheses" />

                <Button
                    android:id="@+id/buttonRightParen"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:onClick="enterValue"
                    android:tag=")"
                    android:text="@string/string_right_parentheses" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform" />

            </TableRow>

        </TableLayout>

    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>